Updating openchannel links to point to github.

--- a/pymtk/installation.html
+++ b/pymtk/installation.html
@@ -55,7 +55,7 @@ Prerequisites:
   >Python 2.4 or 2.5</a>
 
 <p>
-2. <a class="ulink" href="http://www.openchannelfoundation.org/projects/MISR_Toolkit"
+2. <a class="ulink" href="https://github.com/nasa/MISR-Toolkit/releases"
   >MISR Toolkit</a>
 
 <p>
